<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorAzulProyecto"
    tools:context="es.leitmotiv.a14felipecm.intermusic.Formulario">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etf_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_nombre"/>

            <EditText
                android:id="@+id/etf_correoe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_correoe"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_fechas"/>

            <Button
                android:id="@+id/dpf_fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ></Button>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_ciudad"/>
            <Spinner
                android:id="@+id/spf_ciudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/Ciudades"
                >
            </Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_instrumento"/>

            <Spinner
                android:id="@+id/spf_instrumento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/Instrumentos"></Spinner>


            <EditText
                android:id="@+id/etf_notas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_notas"/>

            <Button
                android:id="@+id/btnf_enviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_enviar"
                android:gravity="center"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
