<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/margen_lateral"
    android:paddingRight="@dimen/margen_lateral"
    android:orientation="vertical"
    android:background="@color/colorAzulProyecto"
    tools:context="es.leitmotiv.a14felipecm.intermusic.Principal">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >

    <!--1 ROW-->
        <TableRow
            android:gravity="center"
            android:layout_weight="1"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_local_activity_white_48dp"
                    android:onClick="verExclusivo"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorBlanco"
                    android:text="@string/ssecc_exclusivo"
                    android:textStyle="bold"
                    android:onClick="verExclusivo"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_slideshow_white_48dp"
                    android:onClick="verBreves"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorBlanco"
                    android:text="@string/ssecc_videos"
                    android:textStyle="bold"
                    android:shadowColor="@color/colorNaranjaProyecto"
                    android:shadowRadius="12"
                    android:onClick="verBreves"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_music_video_white_48dp"
                    android:onClick="verIneditas"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorBlanco"
                    android:text="@string/ssecc_ineditas"
                    android:textStyle="bold"
                    android:onClick="verIneditas"/>
            </LinearLayout>

        </TableRow>

    <!--2 ROW-->
        <TableRow
            android:gravity="center"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_map_white_48dp"
                    android:onClick="verMapa"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorBlanco"
                    android:text="@string/ssecc_mapai"
                    android:textStyle="bold"
                    android:onClick="verMapa"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/ic_dialog_map"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorBlanco"
                    android:text="@string/ssecc_icvisitadas"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/ic_dialog_map"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorBlanco"
                    android:text="@string/ssecc_ituristica"
                    android:textStyle="bold"/>
            </LinearLayout>

        </TableRow>

    <!--3 ROW-->
        <TableRow
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_camera_enhance_white_48dp"
                    android:onClick="verTomas"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorBlanco"
                    android:text="@string/ssecc_tfalsas"
                    android:textStyle="bold"
                    android:onClick="verTomas"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_mail_outline_white_48dp"
                    android:onClick="verFormulario"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorBlanco"
                    android:text="@string/ssecc_formulario"
                    android:textStyle="bold"
                    android:onClick="verFormulario"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_work_white_48dp"
                    android:onClick="verColaboradores"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorBlanco"
                    android:text="@string/ssecc_enlaces"
                    android:textStyle="bold"
                    android:onClick="verColaboradores"/>
            </LinearLayout>

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/layaout_add_principal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical">
    </LinearLayout>

</LinearLayout>

    <RelativeLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="@dimen/mlateral_ancho"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorAzulProyecto"
        android:choiceMode="singleChoice"
        android:divider="@color/colorNaranjaProyecto"
        android:dividerHeight="2dp" />
</android.support.v4.widget.DrawerLayout>

